# product_trend_ticker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  queries.py
app/static/: styles.css
app/templates/components/cards/: trend_card.html
src/app/: config.py  database.py  main.py  queries.py
src/app/data/: example_data.csv
src/app/templates/: categories.html  countries.html  index.html  ticker.html
src/app/templates/components/cards/: trend_metrics.html
src/app/templates/components/modals/: share_modal.html
src/app/templates/layouts/: base.html  trends_grid.html
tests/: conftest.py
tests/unit/api/: test_endpoints.py
tests/unit/database/: test_cache.py
tests/unit/utils/: test_config.py
