[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.5",
    "google-cloud-bigquery>=3.27.0",
    "pydantic-settings>=2.6.1",
    "apscheduler>=3.11.0",
    "jinja2>=3.1.4",
    "google-cloud-bigquery-storage>=2.27.0",
    "watchfiles>=1.0.0",
    "uvicorn>=0.32.1",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app"]
